--- a/modules/parent/pom.xml
+++ b/modules/parent/pom.xml
@@ -52,6 +52,7 @@
 		<nosqlunit.version>0.8.0</nosqlunit.version>
 		<jetty.version>8.1.16.v20140903</jetty.version>
 		<h2.version>1.3.176</h2.version>
+		<commons-pool2.version>2.4.2</commons-pool2.version>
 
 		<!-- Plugin的属性 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -628,6 +629,11 @@
 			</dependency>
 
 			<!-- commons-pool -->
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-pool2</artifactId>
+				<version>${commons-pool2.version}</version>
+			</dependency>
 			<!-- email -->
 			<dependency>
 				<groupId>javax.mail</groupId>
