--- a/modules/redis/pom.xml
+++ b/modules/redis/pom.xml
@@ -51,7 +51,12 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+		</dependency>
+		
 		<!-- TEST -->
 		<dependency>
 			<groupId>junit</groupId>
